api folder added

--- a/.env.local
+++ b/.env.local
@@ -5,4 +5,4 @@ VITE_FIREBASE_STROAGE_BUCKET="octochat-48012.appspot.com"
 VITE_FIREBASE_MESSAGING_SENDER_ID="766168967110"
 VITE_FIREBASE_APP_ID="1:766168967110:web:58c1c1f724f1f73b6d34c7"
 VITE_FIREBASE_MEASUREMENT_ID="G-CGEF2XKWNM"
-VITE_API="http://localhost:5000/api/"
+VITE_API="https://hideout-backend.vercel.app"
