--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "@mui/x-date-pickers": "^6.0.4",
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.3",
     "dayjs": "^1.11.7",
     "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-swipeable-views": "^0.14.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
