--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.3",
     "dayjs": "^1.11.7",
     "firebase": "^9.16.0",
+    "framer-motion": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
