--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-swipeable-views": "^0.14.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
