--- a/.env.local
+++ b/.env.local
@@ -6,5 +6,5 @@ VITE_FIREBASE_MESSAGING_SENDER_ID="766168967110"
 VITE_FIREBASE_APP_ID="1:766168967110:web:58c1c1f724f1f73b6d34c7"
 VITE_FIREBASE_MEASUREMENT_ID="G-CGEF2XKWNM"
 VITE_NEWS_API="949b6b39126940c9a04645b59192bece"
-# VITE_API="https://hideout-backend.vercel.app/api"
-VITE_API="http://localhost:5000/api"
+VITE_API="https://hideout-backend.onrender.com/api"
+# VITE_API="http://localhost:5000/api"
